# lambda-rust-sample

./: .gitignore  .travis.yml  Cargo.toml  README.md  codecov.yml  coverage.sh  package-lock.json  package.json  serverless.yml
src/: main.rs
